Fixed smartphones's horizontal scrolling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -126,7 +126,7 @@
 }
 
 body {
-  @apply bg-white text-slate-900 dark:bg-slate-950 dark:text-white scroll-smooth transition-colors duration-300;
+  @apply bg-white text-slate-900 dark:bg-slate-950 dark:text-white scroll-smooth transition-colors duration-300 overflow-x-hidden;
 }
 
 /* Custom Scrollbar */
